--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.config.import=optional:configserver:http://localhost:8888
 spring.application.name=currency-conversion
 server.port=8100
+#eureka.instance.hostname=localhost
+#eureka.instance.prefer-ip-address=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import=optional:configserver:
